common/force-app/main/default/objects/User/fields/AFSL_GS__c.field-meta.xml
<CustomField>
    <fullName>AFSL_GS__c</fullName>
    <label>AFSL GS</label>
    <type>TextArea</type>
</CustomField>