common/force-app/main/default/objects/User/fields/AFSL_VC__c.field-meta.xml
<CustomField>
    <fullName>AFSL_VC__c</fullName>
    <label>AFSL VC</label>
    <type>TextArea</type>
</CustomField>