common/force-app/main/default/objects/User/fields/Botanic_Wellness__c.field-meta.xml
<CustomField>
    <fullName>Botanic_Wellness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Botanic Wellness</label>
    <type>Checkbox</type>
</CustomField>