common/force-app/main/default/objects/User/fields/Contracts_Administration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Administration_Fee__c</fullName>
    <label>Contracts Administration Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>