common/force-app/main/default/objects/User/fields/CRC_Commission__c.field-meta.xml
<CustomField>
    <fullName>CRC_Commission__c</fullName>
    <label>CRC Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>