common/force-app/main/default/objects/User/fields/Financial_Services_Guide__c.field-meta.xml
<CustomField>
    <fullName>Financial_Services_Guide__c</fullName>
    <label>Financial Services Guide</label>
    <type>Url</type>
</CustomField>