common/force-app/main/default/objects/User/fields/General_Warning_Statement__c.field-meta.xml
<CustomField>
    <fullName>General_Warning_Statement__c</fullName>
    <label>General Warning Statement</label>
    <type>Url</type>
</CustomField>