common/force-app/main/default/objects/User/fields/High_Growth_Property_Fund_Park_Ridge__c.field-meta.xml
<CustomField>
    <fullName>High_Growth_Property_Fund_Park_Ridge__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Product Interest Community User</inlineHelpText>
    <label>High Growth Property Fund - Park Ridge</label>
    <type>Checkbox</type>
</CustomField>