common/force-app/main/default/objects/User/fields/Personal_Address__c.field-meta.xml
<CustomField>
    <fullName>Personal_Address__c</fullName>
    <label>Personal Address</label>
    <type>TextArea</type>
</CustomField>