common/force-app/main/default/objects/User/fields/Qualifies_for_Auto_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>Qualifies_for_Auto_Deactivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualifies for Auto-Deactivation</label>
    <type>Checkbox</type>
</CustomField>