common/force-app/main/default/objects/User/fields/Super_High_Yield_Fund_Pimpama__c.field-meta.xml
<CustomField>
    <fullName>Super_High_Yield_Fund_Pimpama__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Product Interest Community User</inlineHelpText>
    <label>Super High Yield Fund - Pimpama</label>
    <type>Checkbox</type>
</CustomField>