common/force-app/main/default/objects/User/fields/Test_PIPO_Portal__c.field-meta.xml
<CustomField>
    <fullName>Test_PIPO_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a provisional field to test PIPO Portal. This needs to be deleted after launch of the portal</description>
    <label>Test PIPO Portal</label>
    <type>Checkbox</type>
</CustomField>