common/force-app/main/default/objects/User/fields/TimeTrade_SF1__GTM_Has_Private_number__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__GTM_Has_Private_number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if the GTM Account of the user has a private number(own conference call information) used for meetings</description>
    <label>GTM - Has Private number?</label>
    <type>Checkbox</type>
</CustomField>