common/force-app/main/default/objects/User/fields/TimeTrade_SF1__GTM_Username__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__GTM_Username__c</fullName>
    <description>Used to store the Gotomeeting Usename of the user</description>
    <label>GTM Username</label>
    <length>64</length>
    <type>Text</type>
</CustomField>