common/force-app/main/default/objects/User/fields/TimeTrade_SF1__JoinMe_has_Personal_URL__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__JoinMe_has_Personal_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>join.me has Personal URL</label>
    <type>Checkbox</type>
</CustomField>