common/force-app/main/default/objects/User/fields/TimeTrade_SF1__JoinMe_Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__JoinMe_Refresh_Token__c</fullName>
    <description>This field is being migrated to TimeTrade_User__c.</description>
    <label>join.me Refresh Token MIGRATED</label>
    <length>30</length>
    <type>Text</type>
</CustomField>