common/force-app/main/default/objects/User/fields/TimeTrade_SF1__TimetradeCalendarLastSync__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__TimetradeCalendarLastSync__c</fullName>
    <description>Shows the last date time when the Calendar was synced for the User.</description>
    <label>Timetrade Calendar Last Sync</label>
    <type>DateTime</type>
</CustomField>