common/force-app/main/default/objects/User/fields/TimeTrade_SF1__WebEx_User__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__WebEx_User__c</fullName>
    <label>WebEx Username</label>
    <length>64</length>
    <type>Text</type>
</CustomField>