common/force-app/main/default/objects/User/fields/TimeTrade_SF1__Zoom_ID__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Zoom_ID__c</fullName>
    <label>Zoom ID</label>
    <length>64</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>