common/force-app/main/default/objects/User/fields/TimeTrade_SF1__Zoom_Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Zoom_Refresh_Token__c</fullName>
    <description>This field is being migrated to TimeTrade_User__c.</description>
    <inlineHelpText>Do not put this field on any page layouts or alter the field&apos;s value.</inlineHelpText>
    <label>Zoom Refresh Token MIGRATED</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>