common/force-app/main/default/objects/User/fields/TimeTrade_SF1__Zoom_Token_Last_Renewal__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Zoom_Token_Last_Renewal__c</fullName>
    <description>This field is being migrated to TimeTrade_User__c.</description>
    <label>Zoom Token Last Renewal MIGRATED</label>
    <type>DateTime</type>
</CustomField>