common/force-app/main/default/objects/User/fields/VC_Commission__c.field-meta.xml
<CustomField>
    <fullName>VC_Commission__c</fullName>
    <label>VC Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>