common/force-app/main/default/objects/User/fields/VentureCrowd_Services_Australia__c.field-meta.xml
<CustomField>
    <fullName>VentureCrowd_Services_Australia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product Interest</description>
    <inlineHelpText>Product Interest Community User</inlineHelpText>
    <label>VentureCrowd Services Australia</label>
    <type>Checkbox</type>
</CustomField>