common/force-app/main/default/objects/User/fields/VentureCrowd_T_Cs__c.field-meta.xml
<CustomField>
    <fullName>VentureCrowd_T_Cs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Investor Community</inlineHelpText>
    <label>VentureCrowd T&amp;Cs</label>
    <type>Checkbox</type>
</CustomField>