common/force-app/main/default/objects/User/fields/X2FA_Verified__c.field-meta.xml
<CustomField>
    <fullName>X2FA_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Loginflow, sends SMSs &amp; verifies the mobile number.</description>
    <label>2FA Verified</label>
    <type>Checkbox</type>
</CustomField>