common/force-app/main/default/objects/User/listViews/Active_VentureCrowd_Users.listView-meta.xml
<ListView>
    <fullName>Active_VentureCrowd_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>VC Customer Community Login,VC Investor Community Plus Login</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>VC Partner Community User,GuestUser,Customer Community Plus Login User</value>
    </filters>
    <label>Active VentureCrowd Users</label>
</ListView>