common/force-app/main/default/objects/User/listViews/Old_Customer_Community_Plus_Login_User.listView-meta.xml
<ListView>
    <fullName>Old_Customer_Community_Plus_Login_User</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Customer Community Plus Login User</value>
    </filters>
    <label>Old Customer Community Plus Login User</label>
</ListView>